# FCpy

./: .gitignore  CITATION.cff  CODEMETA.yaml  CODEOWNERS  FCpy_GUI_exe.py  LICENSE.md  README.md  setup.cfg  setup.py  setupy.py
FCpy/: FC.py  FC_GUI.py  __init__.py  bayesian_example.py
FCpy/UI/: FC_UI.ui
tests/: tests.py
