[metadata]
name = FCpy
description = python Feldman Cousins FC confidence interval CI
author = Evan Groopman
author_email = evan.groopman@nist.gov
license = LICENSE.md
url = https://github.com/usnistgov/FCpy
platforms = any
version = 0.1.3

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =FCpy


[options.packages.find]
where = FCpy
exclude =
    tests

[options.extras_require]
all =
    dask
    pymc
    arviz
    PyQt5